1.1.1 - update Dependencies to actual versions